# steorra

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  steorra.sln  steorra.vcxproj  steorra.vcxproj.filters  vcpkg.json
assets/: basic_shapes.glb
assets/data/: PlanetOrbits.csv  SatelliteConstants.csv  SatelliteOrbits.csv
assets/shaders/: colored_triangle.vert
py/: Output.txt  SatelliteConstants.xlsx  SatelliteOrbits.xlsx  elements.hdf5  get_data.py
raw/: basic_shapes.blend  basic_shapes.blend1
src/: CMakeLists.txt  game.cpp  game.h  steorra.cpp
src/dynamics/: dynamics_orbits.cpp  dynamics_orbits.h
src/graphics/: graphics_command.cpp  graphics_command.h  graphics_data.cpp  graphics_data.h  graphics_errors.h  graphics_memory.cpp  graphics_memory.h  graphics_pipeline.cpp  graphics_pipeline.h  graphics_shaders.cpp  graphics_shaders.h  graphics_types.h
src/util/: util_spectator.cpp  util_spectator.h
